# medical-data-analysis

./: pyproject.toml
tests/: test_medda.py
