[tool.poetry]
name = "medda"
version = "0.1.0"
description = ""
authors = ["ashigirl96 <reon@mma.cs.tsukuba.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.8.3"
mypy = "^0.782"
isort = "^5.1.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
